Sun Dec 31 10:28:43 2000  David L. Levine <levine@cs.wustl.edu>

        * include/makeinclude/platform_osf1_4.0.GNU (LIBS):
          wrapped /usr/lib/cmplrs/cxx/libcxxstd.a with
          $(wildcard), so that is ignored on systems on which
          it doesn't exist, such as Tru64 5.1

Sun Dec 31 09:23:09 2000  David L. Levine <levine@cs.wustl.edu>

        * include/makeinclude/platform_tru64_cxx.GNU: added
          support for Tru64 5.1 (DIGITAL_UNIX 0x510).

        * ace/config-tru64.h: added ACE_LACKS_CUSERID with
          DIGITAL_UNIX >= 0x510, because cuserid () is a macro
          in Tru64 5.1.

        Thanks to Carlos for tracking down this source of compilation
        failure.

Sat Dec 30 16:21:49 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/Hash_Map_Manager_T.h:
        * ace/Map_T.i: Fixed errors in g++ that were introduced while
          applying the patches.

Sat Dec 30 15:10:00 2000  Chris Gill  <cdgill@cs.wustl.edu>

        * ace/RB_Tree.{cpp, h, i}:
          tests/RB_Tree_Test.cpp: Fixed a bug in RB_delete_fixup that
          occurs when the pointer to be fixed up is zero - solution is to
          pass in a pointer to its parent, and maintain the parent pointer
          and fixup pointer in tandem during the fixup function.  Also
          added a few functions to test the red-black invariant(s) at each
          node of the tree, and added an invariant test call after each
          bind and unbind in a new stress test in RB_Tree_Test.cpp.

          Thanks to Klaus H. Wolf <hw@cyland.com> for pointing out the
          problem and for contributing the stress test (which in a
          slightly modified form is now part of the RB_Tree_Test.cpp code)
          that reproduced the problem.

Sat Dec 30 11:12:08 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/Hash_Map_Manager_T.h:
        * ace/Map_T.i:
        * ace/Message_Block_T.cpp: Added patches provided by J. Russell